# comment_toxicity_classifier

./: main.py  pyproject.toml
comment_toxicity/: manage.py
comment_toxicity/comment_toxicity/: asgi.py  settings.py  urls.py  wsgi.py
comment_toxicity/comment_toxicity_app/: apps.py  urls.py  views.py
comment_toxicity/comment_toxicity_app/templates/: index.html  result.html
core/data/: train.csv
core/model/: toxicity_classifier.ipynb  toxicity_model.joblib  toxicity_model.keras  vectorizer.joblib
