[project]
name = "comment-toxicity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy==1.26.4",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "tensorflow[and-cuda]==2.17",
]
